builds/tests/258/data/attachments/14a22f70faf058d3.txt
2026-05-31 16:57:13,034 INFO     yoyo.migrations — Applying 0001_initial_schema
2026-05-31 16:57:13,034 INFO     yoyo.migrations —  - applying step 0
2026-05-31 16:57:13,035 INFO     yoyo.migrations —  - applying step 1
2026-05-31 16:57:13,035 INFO     yoyo.migrations —  - applying step 2
2026-05-31 16:57:13,035 INFO     yoyo.migrations —  - applying step 3
2026-05-31 16:57:13,035 INFO     yoyo.migrations —  - applying step 4
2026-05-31 16:57:13,035 INFO     yoyo.migrations —  - applying step 5
2026-05-31 16:57:13,036 INFO     yoyo.migrations —  - applying step 6
2026-05-31 16:57:13,036 INFO     yoyo.migrations —  - applying step 7
2026-05-31 16:57:13,036 INFO     yoyo.migrations —  - applying step 8
2026-05-31 16:57:13,036 INFO     yoyo.migrations —  - applying step 9
2026-05-31 16:57:13,037 INFO     yoyo.migrations —  - applying step 10
2026-05-31 16:57:13,037 INFO     yoyo.migrations —  - applying step 11
2026-05-31 16:57:13,037 INFO     yoyo.migrations —  - applying step 12
2026-05-31 16:57:13,037 INFO     yoyo.migrations —  - applying step 13
2026-05-31 16:57:13,037 INFO     yoyo.migrations —  - applying step 14
2026-05-31 16:57:13,039 INFO     yoyo.migrations — Marking 0001_initial_schema applied
2026-05-31 16:57:13,040 INFO     yoyo.migrations — Applying 0002_exchange_rates_source_target
2026-05-31 16:57:13,040 INFO     yoyo.migrations —  - applying step 0
2026-05-31 16:57:13,041 INFO     yoyo.migrations —  - applying step 1
2026-05-31 16:57:13,042 INFO     yoyo.migrations — Marking 0002_exchange_rates_source_target applied
2026-05-31 16:57:13,042 INFO     yoyo.migrations — Applying 0003_app_currencies
2026-05-31 16:57:13,043 INFO     yoyo.migrations —  - applying step 0
2026-05-31 16:57:13,044 INFO     yoyo.migrations — Marking 0003_app_currencies applied
2026-05-31 16:57:13,045 INFO     yoyo.migrations — Applying 0004_receipt_pipeline
2026-05-31 16:57:13,045 INFO     yoyo.migrations —  - applying step 0
2026-05-31 16:57:13,045 INFO     yoyo.migrations —  - applying step 1
2026-05-31 16:57:13,046 INFO     yoyo.migrations —  - applying step 2
2026-05-31 16:57:13,046 INFO     yoyo.migrations —  - applying step 3
2026-05-31 16:57:13,046 INFO     yoyo.migrations —  - applying step 4
2026-05-31 16:57:13,046 INFO     yoyo.migrations —  - applying step 5
2026-05-31 16:57:13,047 INFO     yoyo.migrations —  - applying step 6
2026-05-31 16:57:13,047 INFO     yoyo.migrations —  - applying step 7
2026-05-31 16:57:13,047 INFO     yoyo.migrations —  - applying step 8
2026-05-31 16:57:13,047 INFO     yoyo.migrations —  - applying step 9
2026-05-31 16:57:13,048 INFO     yoyo.migrations —  - applying step 10
2026-05-31 16:57:13,048 INFO     yoyo.migrations —  - applying step 11
2026-05-31 16:57:13,048 INFO     yoyo.migrations —  - applying step 12
2026-05-31 16:57:13,049 INFO     yoyo.migrations —  - applying step 13
2026-05-31 16:57:13,049 INFO     yoyo.migrations —  - applying step 14
2026-05-31 16:57:13,049 INFO     yoyo.migrations —  - applying step 15
2026-05-31 16:57:13,050 INFO     yoyo.migrations —  - applying step 16
2026-05-31 16:57:13,050 INFO     yoyo.migrations —  - applying step 17
2026-05-31 16:57:13,051 INFO     yoyo.migrations —  - applying step 18
2026-05-31 16:57:13,051 INFO     yoyo.migrations —  - applying step 19
2026-05-31 16:57:13,051 INFO     yoyo.migrations —  - applying step 20
2026-05-31 16:57:13,051 INFO     yoyo.migrations —  - applying step 21
2026-05-31 16:57:13,051 INFO     yoyo.migrations —  - applying step 22
2026-05-31 16:57:13,055 INFO     yoyo.migrations — Marking 0004_receipt_pipeline applied
2026-05-31 16:57:13,056 INFO     yoyo.migrations — Applying 0005_income_logging
2026-05-31 16:57:13,056 INFO     yoyo.migrations —  - applying step 0
2026-05-31 16:57:13,057 INFO     yoyo.migrations —  - applying step 1
2026-05-31 16:57:13,057 INFO     yoyo.migrations —  - applying step 2
2026-05-31 16:57:13,057 INFO     yoyo.migrations —  - applying step 3
2026-05-31 16:57:13,058 INFO     yoyo.migrations —  - applying step 4
2026-05-31 16:57:13,058 INFO     yoyo.migrations —  - applying step 5
2026-05-31 16:57:13,059 INFO     yoyo.migrations —  - applying step 6
2026-05-31 16:57:13,059 INFO     yoyo.migrations —  - applying step 7
2026-05-31 16:57:13,059 INFO     yoyo.migrations —  - applying step 8
2026-05-31 16:57:13,059 INFO     yoyo.migrations —  - applying step 9
2026-05-31 16:57:13,059 INFO     yoyo.migrations —  - applying step 10
2026-05-31 16:57:13,059 INFO     yoyo.migrations —  - applying step 11
2026-05-31 16:57:13,060 INFO     yoyo.migrations —  - applying step 12
2026-05-31 16:57:13,060 INFO     yoyo.migrations —  - applying step 13
2026-05-31 16:57:13,060 INFO     yoyo.migrations —  - applying step 14
2026-05-31 16:57:13,060 INFO     yoyo.migrations —  - applying step 15
2026-05-31 16:57:13,060 INFO     yoyo.migrations —  - applying step 16
2026-05-31 16:57:13,061 INFO     yoyo.migrations —  - applying step 17
2026-05-31 16:57:13,061 INFO     yoyo.migrations —  - applying step 18
2026-05-31 16:57:13,061 INFO     yoyo.migrations —  - applying step 19
2026-05-31 16:57:13,061 INFO     yoyo.migrations —  - applying step 20
2026-05-31 16:57:13,061 INFO     yoyo.migrations —  - applying step 21
2026-05-31 16:57:13,061 INFO     yoyo.migrations —  - applying step 22
2026-05-31 16:57:13,062 INFO     yoyo.migrations —  - applying step 23
2026-05-31 16:57:13,062 INFO     yoyo.migrations —  - applying step 24
2026-05-31 16:57:13,062 INFO     yoyo.migrations —  - applying step 25
2026-05-31 16:57:13,062 INFO     yoyo.migrations —  - applying step 26
2026-05-31 16:57:13,062 INFO     yoyo.migrations —  - applying step 27
2026-05-31 16:57:13,063 INFO     yoyo.migrations —  - applying step 28
2026-05-31 16:57:13,063 INFO     yoyo.migrations —  - applying step 29
2026-05-31 16:57:13,063 INFO     yoyo.migrations —  - applying step 30
2026-05-31 16:57:13,063 INFO     yoyo.migrations —  - applying step 31
2026-05-31 16:57:13,063 INFO     yoyo.migrations —  - applying step 32
2026-05-31 16:57:13,064 INFO     yoyo.migrations —  - applying step 33
2026-05-31 16:57:13,064 INFO     yoyo.migrations —  - applying step 34
2026-05-31 16:57:13,066 INFO     yoyo.migrations —  - applying step 35
2026-05-31 16:57:13,066 INFO     yoyo.migrations —  - applying step 36
2026-05-31 16:57:13,067 INFO     yoyo.migrations —  - applying step 37
2026-05-31 16:57:13,067 INFO     yoyo.migrations —  - applying step 38
2026-05-31 16:57:13,068 INFO     yoyo.migrations —  - applying step 39
2026-05-31 16:57:13,070 INFO     yoyo.migrations —  - applying step 40
2026-05-31 16:57:13,072 INFO     yoyo.migrations — Marking 0005_income_logging applied
2026-05-31 16:57:13,078 INFO     dinary.background.classification.task — Receipt drain: processing receipt_id=1
2026-05-31 16:57:13,079 ERROR    dinary.background.classification.task — Permanent error for receipt_id=1 — poisoning
Traceback (most recent call last):
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 221, in _process_job
    items = await asyncio.to_thread(_get_items, job.receipt_id)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/asyncio/threads.py", line 25, in to_thread
    return await loop.run_in_executor(None, func_call)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/concurrent/futures/thread.py", line 59, in run
    result = self.fn(*self.args, **self.kwargs)
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 511, in _get_items
    raise RuntimeError(
        f"receipt_id={receipt_id}: no items after parsing — parse error",
    )
RuntimeError: receipt_id=1: no items after parsing — parse error
